2016-01-19  Brandon Invergo  <brandon@invergo.net>

	* Makefile.am (dist_doc_DATA): Fix distribution of COPYING.GPLv3
	and COPYING.EXCEPTION

	* src/Makefile.in.make (uninstall): Fix uninstallation targets to
	make them safer and to make script uninstallation work correctly.

2014-04-07  Brandon Invergo  <brandon@invergo.net>

	* src/m4/python.m4 (PC_PYTHON_SITE_PACKAGE_DIR): fix creation of
	the pkgpythondir variable
	(PC_PYTHON_EXEC_PACKAGE_DIR): fix creation of the pkgpyexecdir
	variable

2013-08-21  Brandon Invergo  <brandon@invergo.net>

	* src/configure.ac: Include Autoconf macros via m4_include rather
	than AC_CONFIG_MACRO_DIRS

2013-08-17  Brandon Invergo  <brandon@invergo.net>

	* src/m4/python.m4 (PC_VERIFY_VERSION): Fix version checking
	algorithm to include the Python release level (final releases
	only; no alpha/beta)
	(PC_VERIFY_VERSION, PC_INIT): Fix printing of results of version
	checking to not be put on a new line
	(PC_PROG_PYTHON): Rename AC_PROG_PYTHON to fit with the
	pyconfigure PC_ namespace.  Move Python interpreter list
	construction call from PC_INIT here.
	(PC_PROG_PYTHON): Reverse list of interpreters so "python" and
	optionally "python2" and/or "python3" come at the front.
	(PC_PROG_PYTHON): Change to define via AC_DEFUN_ONCE
	(PC_INIT): Use new PC_PROG_PYTHON for interpreter searching
	(PC_PYTHON_CHECK_VERSION): Change to use AC_LINK_IFELSE instead of
	AC_CONFTEST
	(PC_PYTHON_CHECK_PREFIX): Change to use AC_LINK_IFELSE instead of
	AC_CONFTEST
	(PC_PYTHON_CHECK_EXEC_PREFIX): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST
	(PC_PYTHON_CHECK_PLATFORM): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST
	(PC_PYTHON_CHECK_SITE_DIR): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST
	(PC_PYTHON_CHECK_EXEC_DIR): Change to use AC_LINK_IFELSE instead
	of AC_CONFTEST

	* pyconf.in: Handle different exceptions being thrown by os.mkdir
	in Python 2 vs Python 3
	(parse_pkg_info): Properly parse multi-line descriptions in
	PKG-INFO
